<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_16_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        ></TextView>

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="16dp"
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#f0737b"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        >

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/sos"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        app:layout_constraintTop_toTopOf="@+id/pink_card"></TextView>

    <TextView
        app:layout_constraintEnd_toStartOf="@+id/sos_img"
        android:id="@+id/sos_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/in_case_of_any_emergency_keep_telling_family_members_to_contact_me"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/pink_card"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        app:layout_constraintTop_toBottomOf="@+id/text_sos"></TextView>

    <ImageView
        android:id="@+id/sos_img"
        android:layout_margin="16dp"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:elevation="16dp"
        android:src="@drawable/ic_sos"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@+id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"></ImageView>

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="16dp"
        android:id="@+id/green_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        android:layout_marginTop="96dp"
        app:cardBackgroundColor="#63d2c8"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/pink_card"
        tools:layout_editor_absoluteX="16dp"></com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/guard"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        app:layout_constraintTop_toTopOf="@+id/green_card"></TextView>

    <TextView
        app:layout_constraintEnd_toStartOf="@+id/guard_img"
        android:id="@+id/guard_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/open_when_you_are_on_a_potentially_dangerous_journey"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/green_card"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        app:layout_constraintTop_toBottomOf="@+id/text_guard"></TextView>

    <ImageView
        android:id="@+id/guard_img"
        android:layout_margin="16dp"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:elevation="16dp"
        android:src="@drawable/guard"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@+id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"></ImageView>


</androidx.constraintlayout.widget.ConstraintLayout>